--- a/themes/godocs/layouts/contact/list.html
+++ b/themes/godocs/layouts/contact/list.html
@@ -34,7 +34,7 @@
               <label for="message">{{ i18n "write_message" }}</label>
               <textarea name="message" id="message" class="form-control" placeholder="Your Text here ..."></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">send</button>
+            <button type="submit" class="btn btn-primary">{{ i18n "send" }}</button>
           </form>
         </div>
       </div>
