ADD: favicon and formspree

--- a/themes/godocs/layouts/contact/list.html
+++ b/themes/godocs/layouts/contact/list.html
@@ -25,9 +25,10 @@
               <label for="reason">{{ i18n "contact_reason" }}</label>
               <select id="reason" class="form-control custom-select" name="reason" required>
                 <option selected disabled>Choose Your Reason</option>
-                <option value="business">Business</option>
-                <option value="ticket">Ticket</option>
-                <option value="project">Project</option>
+                <option value="business">HomeLab</option>
+                <option value="ticket">HowTo</option>
+                <option value="project">Projects</option>
+                <option value="project">Other</option>
               </select>
             </div>
             <div class="form-group">
