FIX: hide navbar-toggler, always show sidebar-nav

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -7,7 +7,7 @@ footer .navbar-brand {
 	display: none !important;
 }
 
-#navigation, .pagination {
+#navigation, .pagination, .navbar-toggler {
 	display: none !important;
 }
 
