--- a/themes/godocs/layouts/partials/default.html
+++ b/themes/godocs/layouts/partials/default.html
@@ -2,7 +2,7 @@
 <section>
   <div class="container">
     <div class="row">
-      <div class="col-lg-3 col-md-4 d-none d-md-block">
+      <div class="col-lg-3 col-md-4 d-md-block">
         <ul class="sidenav pt-4 pr-4 border-right border-default">
           {{ $currentNode := . }}
           {{range .Site.Home.Sections.ByWeight}}
