--- a/themes/godocs/layouts/partials/footer.html
+++ b/themes/godocs/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <footer>
-  <div class="container">
+  <div class="container-fluid">
     <div class="row align-items-center border-bottom py-5">
       <div class="col-lg-4">
         <ul class="list-inline footer-menu text-center text-lg-left">
