--- a/themes/godocs/layouts/partials/header.html
+++ b/themes/godocs/layouts/partials/header.html
@@ -1,6 +1,6 @@
 {{ "<!-- navigation -->" | safeHTML }}
 <header class="sticky-top navigation">
-  <div class="container">
+  <div class="container-fluid">
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
       <a class="navbar-brand" href="{{ .Site.BaseURL | relLangURL }}">
